--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Build apwine plugin
+      - name: Build APWine plugin
         run: |
           make DEBUG=1
 
-      - name: Upload apwine binary
+      - name: Upload APWine binary
         uses: actions/upload-artifact@v2
         with:
           name: apwine-app-debug
@@ -81,7 +81,6 @@ jobs:
         env:
           EMAIL: ${{ secrets.COVERITY_SCAN_EMAIL }}
           TOKEN: ${{ secrets.COVERITY_SCAN_TOKEN }}
-
   job_build_debug_nano_s:
     name: Build debug Nano S
     runs-on: ubuntu-latest
@@ -105,6 +104,30 @@ jobs:
         with:
           name: binaries
           path: tests/elfs/apwine_nanos.elf
+
+  job_build_debug_nano_sp:
+    name: Build debug Nano S+
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ledgerhq/ledger-app-builder/ledger-app-builder:latest
+    steps:
+      - name: Clone
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Build plugin for Nano S+
+        run: |
+          make clean
+          make BOLOS_SDK=$NANOSP_SDK
+      - name: Move binary to test directory
+        run: |
+          mkdir -p ./tests/elfs/
+          mv bin/app.elf ./tests/elfs/apwine_nanosp.elf
+      - name: Upload plugin binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: binaries
+          path: tests/elfs/apwine_nanosp.elf
 
   job_build_debug_nano_x:
     name: Build debug Nano X
@@ -145,7 +168,7 @@ jobs:
       - name: Build ethereum
         run: |
           make clean
-          make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOS_SDK CHAIN=ethereum
+          make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOS_SDK CHAIN=ethereum ALLOW_DATA=1
       - name: Move binary to test directory
         run: |
           mkdir -p ./tests/elfs/
@@ -155,6 +178,32 @@ jobs:
         with:
           name: binaries
           path: tests/elfs/ethereum_nanos.elf
+
+  job_build_ethereum_nano_sp:
+    name: Build Ethereum application for Nano S+ testing
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ledgerhq/ledger-app-builder/ledger-app-builder:latest
+    steps:
+      - name: Checkout app-ethereum
+        uses: actions/checkout@v2
+        with:
+          repository: LedgerHQ/app-ethereum
+          ref: ${{ ((github.base_ref || github.ref_name) == 'main' && 'master') || (github.base_ref || github.ref_name) }}
+          submodules: recursive
+      - name: Build ethereum
+        run: |
+          make clean
+          make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOSP_SDK CHAIN=ethereum ALLOW_DATA=1
+      - name: Move binary to test directory
+        run: |
+          mkdir -p ./tests/elfs/
+          mv bin/app.elf ./tests/elfs/ethereum_nanosp.elf
+      - name: Upload plugin binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: binaries
+          path: tests/elfs/ethereum_nanosp.elf
 
   job_build_ethereum_nano_x:
     name: Build Ethereum application for Nano X testing
@@ -171,7 +220,7 @@ jobs:
       - name: Build ethereum
         run: |
           make clean
-          make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOX_SDK CHAIN=ethereum
+          make -j DEBUG=1 BYPASS_SIGNATURES=1 BOLOS_SDK=$NANOX_SDK CHAIN=ethereum ALLOW_DATA=1
       - name: Move binary to test directory
         run: |
           mkdir -p ./tests/elfs/
@@ -185,8 +234,10 @@ jobs:
   jobs-e2e-tests:
     needs:
       - job_build_debug_nano_s
+      - job_build_debug_nano_sp
       - job_build_debug_nano_x
       - job_build_ethereum_nano_s
+      - job_build_ethereum_nano_sp
       - job_build_ethereum_nano_x
     runs-on: ubuntu-latest
     steps:
