--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 src/glyphs.c
 src/glyphs.h
 bin/
+build/
 debug/
 dep/
 obj/
@@ -18,6 +19,7 @@ __pycache__/
 .python-version
 
 # JS
+tests/elfs/
 tests/node_modules
 tests/lib
 tests/snapshots-tmp
